--- a/sass/layout/main_accueil.scss
+++ b/sass/layout/main_accueil.scss
@@ -25,20 +25,19 @@ main {
             padding-bottom: 1%;
             display: flex;
             flex-direction: column;
+            position: relative;
+            margin-bottom: 20px;
+            width: 90%;
         }
 
-        a {
-            width: 90%;
-            margin-bottom: 1rem;
-            text-decoration: none;
-        }
+        
 
         img {
             
             width: 100%;
             object-fit: cover;
-            height: 208px;
-            border-radius: 25px 25px 0px 0px;
+            height: 200px;
+            border-radius: 15px 15px 0px 0px;
         }
 
         .info_photo {
@@ -51,8 +50,8 @@ main {
             font-size: 1.5rem;
             position: absolute;
             right: 1rem ;
-            top: 50%;
-            transform: translateY(-50%);
+            top: 25%;
+            cursor: pointer;
             }
         }
             
@@ -67,8 +66,18 @@ main {
             margin-top: 0;
             font-weight: 300;
         }
-        
     }
-
-   
 }
+
+.new{
+    margin-bottom: 0;
+    background-color: rgb(153, 226, 208);
+    position: absolute;
+    left: 75%;
+    top: 5%;
+    padding: 4px;
+    text-decoration: none;
+    border-radius: 2px;
+    color: rgb(15, 139, 108);
+}
+
