--- a/sass/style.scss
+++ b/sass/style.scss
@@ -6,7 +6,7 @@
 @import "./layout/footer.scss";
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;500;700&display=swap');
 @import url("https://fonts.googleapis.com/css2?family=Shrikhand&display=swap");
-
+@import "./base/mixins.scss";
 
 
         /*---<geolocalisation>---*/
