--- a/sass/base/mixins.scss
+++ b/sass/base/mixins.scss
@@ -1,9 +1,9 @@
 @mixin tablette-only{
-    @media screen and (max-width: map-get($breakpoints, tablette)) {
+    @media screen and (max-width: map("$breakpoints, tablette")) {
         @content;
         }
     }
 
     $breakpoints:(
-        tablette-only:768px
+        tablette-only: 768px
     )
