--- a/sass/layout/nav_restau.scss
+++ b/sass/layout/nav_restau.scss
@@ -1,4 +1,4 @@
-@import "/base/mixins.scss";
+@import "../base/mixins.scss";
 
 .nav_restaurant_accueil{
     
@@ -10,7 +10,8 @@
         padding: 1rem;
         list-style: none;
         counter-reset: order;
-        @include tablette-only {flex-direction: row;}
+        @include tablette-only {flex-direction:row;}
+        
     }
 
 
@@ -25,6 +26,7 @@
         display: flex;
         justify-content: center;
         align-items: center;
+        @include tablette-only {flex-direction:row;}
         
         
         
