--- a/sass/layout/header.scss
+++ b/sass/layout/header.scss
@@ -1,3 +1,5 @@
+@import "../base/mixins.scss";
+
 header {
   
     font-family: "shrikhand", sans-serif;
@@ -6,6 +8,7 @@ header {
     padding: 0,3rem; 
     position: relative;
     margin: 0;
+    @include desktop {font-size: 2rem;}
 
     h1 {
        margin: 0;
