--- a/sass/layout/main_accueil.scss
+++ b/sass/layout/main_accueil.scss
@@ -2,9 +2,21 @@ main {
     display: flex;
     margin-bottom: 3%;
 
+.bloc_main {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 95%;
+    @include desktop {flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    margin-top:3%}
+}
+
     h3 {
         align-self: flex-start;
         margin-left: 18px;
+        @include desktop {font-size: 2rem;}
     }
 
     .restaurant_accueil {
@@ -14,9 +26,14 @@ main {
         display: flex;
         flex-direction: column;
         align-items: center;
+        position: relative;
         padding-top: 8%;
         padding-bottom: 10%;
+        @include desktop {flex-wrap : wrap;
+            padding-top:0;
+            margin-top: 5%;}
         
+    
 
         article {
             background-color: white;
@@ -28,6 +45,7 @@ main {
             position: relative;
             margin-bottom: 20px;
             width: 90%;
+            @include desktop {width: 48%;}
         }
 
         
@@ -38,24 +56,43 @@ main {
             object-fit: cover;
             height: 200px;
             border-radius: 15px 15px 0px 0px;
+            @include desktop {height: 300px;}
         }
 
-        .info_photo {
+        .vignette_info_photo {
             padding-left: 1rem;
             color: black;
             font-size: smaller;
             position: relative;
+            cursor: pointer;
 
-            i {
+            .heart {
             font-size: 1.5rem;
             position: absolute;
             right: 1rem ;
             top: 25%;
             cursor: pointer;
+            
             }
+            
+            .heartfull {
+                color: transparent;
+                background: linear-gradient(100deg, #9356DC,70%,#FF79DA);
+                background-clip: text;
+                -webkit-background-clip: text;
+                font-size: 1.5rem;
+                position: absolute;
+                right: 1rem ;
+                top: 25%;
+                cursor: pointer;
+                opacity: 0;
+                transition: all 210ms;
+            }            
+             &:hover .heartfull {
+                opacity: 1;
+            }   
         }
             
-
         .title_menu {
             margin-top: 5px;
             margin-bottom: 5px;
@@ -67,17 +104,26 @@ main {
             font-weight: 300;
         }
     }
+
+    .new{
+        margin-bottom: 0;
+        background-color: rgb(153, 226, 208);
+        position: absolute;
+        left: 70%;
+        font-size: larger;
+        width: max-content;
+        top: 5%;
+        padding: 4px;
+        text-decoration: none;
+        border-radius: 2px;
+        color: rgb(15, 139, 108);
+        @include tablette-only {left:80%;}
+        @include desktop {left:80%;}
+        
+    }
+
+
 }
 
-.new{
-    margin-bottom: 0;
-    background-color: rgb(153, 226, 208);
-    position: absolute;
-    left: 75%;
-    top: 5%;
-    padding: 4px;
-    text-decoration: none;
-    border-radius: 2px;
-    color: rgb(15, 139, 108);
-}
+
 
