--- a/sass/layout/discover.scss
+++ b/sass/layout/discover.scss
@@ -19,7 +19,9 @@
 
 .logo_loc {
   margin: auto 15px auto 15px; 
-  font-size: 2rem;}
+  font-size: 1rem;
+  @include desktop {font-size: 2rem;}
+}
 
 
 
