--- a/sass/layout/main_accueil.scss
+++ b/sass/layout/main_accueil.scss
@@ -42,10 +42,9 @@ main {
             padding-bottom: 1%;
             display: flex;
             flex-direction: column;
-            position: relative;
+            
             margin-bottom: 20px;
-            width: 90%;
-            @include desktop {width: 48%;}
+            
         }
 
         
@@ -58,6 +57,14 @@ main {
             border-radius: 15px 15px 0px 0px;
             @include desktop {height: 300px;}
         }
+
+        .vignette {
+            display: block;
+            width: 90%;
+            position: relative;
+           @include desktop {width: 48%;}
+        }
+
 
         .vignette_info_photo {
             padding-left: 1rem;
@@ -86,7 +93,7 @@ main {
                 top: 25%;
                 cursor: pointer;
                 opacity: 0;
-                transition: all 210ms;
+                transition: all 280ms;
             }            
              &:hover .heartfull {
                 opacity: 1;
@@ -109,7 +116,7 @@ main {
         margin-bottom: 0;
         background-color: rgb(153, 226, 208);
         position: absolute;
-        left: 70%;
+        right: 15px;
         font-size: larger;
         width: max-content;
         top: 5%;
