--- a/sass/layout/discover.scss
+++ b/sass/layout/discover.scss
@@ -67,6 +67,7 @@
     font-size: small;
     font-weight: 700;
     height: 25%; 
+    cursor: pointer;
     border: none;
     @include desktop {font-size: 2rem;
     height:20%}
