--- a/sass/layout/footer.scss
+++ b/sass/layout/footer.scss
@@ -2,6 +2,7 @@ footer {
     background-color: rgb(53, 53, 53);
     padding-bottom: 2rem;
     color: rgb(242, 242, 242);
+    
 }
 
 h4 {
@@ -9,8 +10,16 @@ h4 {
     color: rgb(242, 242, 242);
     margin-left: 25px;
     margin-top: 0;
-    padding-top: 10%;
+    padding-top: 5%;
     font-size: 20px;
+    @include desktop {padding-top: 2%;
+    display: flex;
+    justify-content: flex-start;
+    margin-left:20px;}
+    @include tablette-only {padding-top: 2%;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;}
 
 }
 
@@ -18,16 +27,26 @@ h4 {
     display: flex;
     flex-direction: column;
     margin-left: 25px;
+    @include desktop {flex-direction: row;
+    justify-content: flex-start;
+    }
+    @include tablette-only {flex-direction: row;
+        justify-content: flex-start;}
+
 
     p {
         margin-bottom: 0;
         margin-top: 5px;
+        @include desktop {margin-right : 45px};
+        @include tablette-only {margin-right: 45px;}
     }
 
     .a__element {
         margin-top: 5px;
         color:rgb(242, 242, 242);
         text-decoration: none;
+        @include desktop {margin-right: 45px;}
+        @include tablette-only {margin-right: 45px;}
         
     }
 
