pages_restau-ok

--- a/sass/layout/header.scss
+++ b/sass/layout/header.scss
@@ -18,7 +18,7 @@ header {
 
 /*---<header_page 1>---*/
 
-.header_page_1 {
+.header_page {
     font-family: "shrikhand", sans-serif;
     text-align: center;
     box-shadow: none;
@@ -28,7 +28,7 @@ header {
 }
 
 
-.page_1_accueil {
+.page_accueil {
     display: flex;
     align-items: center;
     justify-content: space-evenly;
