--- a/sass/layout/main_page.scss
+++ b/sass/layout/main_page.scss
@@ -1,4 +1,4 @@
-.main_page_1 {
+.main_page {
     display: flex;
     flex-direction: column;
     position: relative;
@@ -8,7 +8,7 @@
     color: rgb(76, 76, 76);
 }
 
-.bloc_main_page_1 {
+.bloc_main_page {
     width: 100%;
     background-color: rgb(247, 247, 247);
 }
@@ -17,15 +17,16 @@
     background-color: rgb(247, 246, 246);
 }
 
-.illustration_page_1 {
+.illustration_page {
     object-fit: cover;
     width: 100%;
+    height: 300px;
 }
 
-.menu_page_1 {
+.menu_page {
     background-color:rgb(247, 246, 246);
 
-    .ss_titre_page_1 {
+    .ss_titre_page{
         display: flex;
         align-items: center;
         justify-content: space-around;
@@ -40,7 +41,7 @@
             margin-bottom: 0;
         }
 
-        .heart_page_1 {
+        .heart_page {
             font-size: 1.5rem;
         }
     }
