--- a/sass/layout/header.scss
+++ b/sass/layout/header.scss
@@ -31,8 +31,17 @@ header {
 .page_accueil {
     display: flex;
     align-items: center;
-    justify-content: space-evenly;
-    width: 90%;}
+    width: 100%;
+
+    a {
+        width : 25%
+    }
+
+    h1 {
+        width: 50%;
+        margin:0;
+    }
+}
 
 
 
