--- a/sass/layout/main_page.scss
+++ b/sass/layout/main_page.scss
@@ -1,10 +1,13 @@
-@keyframes appear {
-    0% {
-        transform: scale(0);
-    }
-    100% {
-        transform: scale(1);
-    }
+@keyframes affichage {
+    from {
+          opacity: (0);}
+     
+    to {
+          opacity: (1);
+        }
+
+          
+    
 }
 
 .main_page {
@@ -44,7 +47,7 @@
         bottom: 50px;
         border-radius: 35px 35px 0px 0px;
 
-        .titre_la_palette_du_gout {
+        .restaurant_name {
             font-family: "shrikhand", sans-serif;
             font-size: 1.5rem;
             margin-bottom: 0;
@@ -74,7 +77,62 @@
         box-shadow: 3px 3px 3px 1px rgb(231, 231, 230);
         width: 95%;
         margin-bottom: 4%;
-        animation: 2s appear ;
+    }
+
+        .menu_1 {
+            animation: affichage 500ms;
+            animation-fill-mode: both;
+            animation-delay: 560ms;
+        }
+
+        .menu_2{
+            animation: affichage 500ms ;
+            animation-fill-mode: both;
+            animation-delay: 910ms;
+            
+        }
+
+        .menu_3{
+            animation: affichage 500ms ;
+            animation-fill-mode: both;
+            animation-delay:1260ms;
+        }
+
+        .menu_4{
+            animation: affichage 500ms ;
+            animation-fill-mode: both;
+            animation-delay: 1610ms;
+        }
+
+        .menu_5{
+            animation: affichage 500ms ;
+            animation-fill-mode: both;
+            animation-delay: 1960ms;
+        }
+
+        .menu_6{
+            animation: affichage 500ms ;
+            animation-fill-mode: both;
+            animation-delay: 2310ms;
+        }
+
+        .menu_7{
+            animation: affichage 500ms ;
+            animation-fill-mode: both;
+            animation-delay: 2660ms;
+        }
+
+        .menu_8{
+            animation: affichage 500ms ;
+            animation-fill-mode: both;
+            animation-delay: 3010ms;
+        }
+
+        .menu_9{
+            animation: affichage 500ms;
+            animation-fill-mode: both;
+            animation-delay: 3360ms;
+        }
     
 
             h4 {
@@ -146,5 +204,5 @@
 .button--commande {
     margin-bottom:15%;
 }
-}
+
 
