modifs_sass-files

--- a/sass/layout/main_page.scss
+++ b/sass/layout/main_page.scss
@@ -1,14 +1,11 @@
-@keyframes affichage {
+/* @keyframes affichage {
     from {
           opacity: (0);}
      
     to {
           opacity: (1);
-        }
-
-          
-    
-}
+        }   
+} */
 
 .main_page {
     display: flex;
