--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,3 +1,4 @@
+@import "./utils/animation.scss"; 
 @import "./layout/base.scss";
 @import  "./layout/header.scss";
 @import  "./layout/nav_restau.scss"; 
