--- a/sass/layout/main_page.scss
+++ b/sass/layout/main_page.scss
@@ -59,13 +59,26 @@
         display: flex;
         flex-direction: column;
         align-items: center;
+        @include desktop {
+            width: 50%;
+        }
     }
+
+
 
     h3 {
         margin-top: 0;
         color: rgb(76, 76, 76);
         font-size: 1rem;
         font-weight: 400;
+    }
+
+    .orga_desktop__menu {
+        @include desktop {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+        }
     }
 
     article {
@@ -166,13 +179,29 @@
             display: flex;
             flex-direction: column;
             align-items: center;
+            @include desktop {
+                margin-top: 0;
+                width: 50%;
+            }
         }
+
+        .orga_desktop_dessert-button {
+            @include desktop {
+            display: flex;
+            align-items: center;
+            }
+        }
+
 
         .detail_menu--desserts {
             margin-top: 10%;
             display: flex;
             flex-direction: column;
             align-items: center;
+            @include desktop {
+                margin-top: 0;
+                width: 50%;
+            }
         }
  
 
@@ -193,13 +222,25 @@
     padding-top: 5%;
     padding-bottom: 5%;
     margin-top: 10%;
-    @include desktop {font-size: 2rem;
-    height:20%}
+    @include desktop {
+        font-size: 2rem; 
+        width: 100%;
+        margin:0;}
    
 }
 
 .button--commande {
     margin-bottom:15%;
+    @include desktop {
+    width: 40%;
+    display: flex;
+    margin-left: 5%;
+    animation: affichage 500ms;
+    animation-fill-mode: both;
+    animation-delay: 3710ms;
+    margin-bottom: 0;
+    margin-top: 1%;}
+    
 }
 
 
