--- a/sass/layout/main_accueil.scss
+++ b/sass/layout/main_accueil.scss
@@ -76,8 +76,7 @@ main {
             position: absolute;
             right: 1rem ;
             top: 25%;
-            cursor: pointer;
-            
+            cursor: pointer;           
             }
             
             .heartfull {
@@ -91,11 +90,11 @@ main {
                 top: 25%;
                 cursor: pointer;
                 opacity: 0;
-                transition: all 280ms;
-            }            
-             &:hover .heartfull {
-                opacity: 1;
-            }   
+                transition: all 280ms;}
+    
+                &:hover .heartfull {
+                    opacity: 1;}
+            
         }
             
         .title_menu {
