--- a/sass/style.scss
+++ b/sass/style.scss
@@ -3,6 +3,7 @@
 @import  "./layout/header.scss";
 @import  "./layout/nav_restau.scss"; 
 @import  "./layout/discover.scss";
+@import "./layout/loading_spinner.scss";
 @import "./layout/main_accueil.scss";
 @import "./layout/footer.scss";
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;500;700&display=swap');
