--- a/sass/layout/discover.scss
+++ b/sass/layout/discover.scss
@@ -69,6 +69,7 @@
     height: 25%; 
     cursor: pointer;
     border: none;
+    box-shadow: 3px 3px 3px 1px #e7e7e6;
     @include desktop {font-size: 2rem;
     height:20%}
   }
