--- a/sass/layout/main_accueil.scss
+++ b/sass/layout/main_accueil.scss
@@ -43,8 +43,8 @@ main {
             padding-bottom: 1%;
             display: flex;
             flex-direction: column;
-            
             margin-bottom: 20px;
+            box-shadow: 3px 3px 3px 1px #e7e7e6;
             
         }
 
