--- a/sass/layout/nav_restau.scss
+++ b/sass/layout/nav_restau.scss
@@ -34,6 +34,7 @@
         display: flex;
         justify-content: center;
         align-items: center;
+        box-shadow: 3px 3px 3px 1px #e7e7e6;
         @include tablette-only {font-size: large;}
 
         
