--- a/sass/layout/loading_spinner.scss
+++ b/sass/layout/loading_spinner.scss
@@ -8,22 +8,29 @@
     left: 0;
     right: 0;
     opacity: 0.9;
-    animation: time_load 3s;
+    animation: time_load 2.5s;
     animation-fill-mode: forwards;
     animation-delay: 3s;
     display: flex;
-    justify-content: space-around;
-    align-items: center;
+    justify-content: center;
+    text-align: center;
 
         .icone {
             width: 60px;
             font-size: xx-large;
-            animation: icone_spinner 3s;
+            animation: icone_spinner 2s;
             animation-delay: 0.5s;
         }
 }
 
-
+#icones_spinner {
+    align-self:center;
+    height: 30%;
+    @include desktop {
+        align-self:flex-end;
+        height: 41%
+    }
+}
 
 @keyframes time_load {
     from {
@@ -32,7 +39,7 @@
 
     to {
         opacity: (0);
-        z-index: 0;
+        visibility: hidden;
     }
     
 }
@@ -50,5 +57,6 @@
 
     100% {
         transform: rotate(360deg);
+        
     }
 }
