--- a/sass/layout/discover.scss
+++ b/sass/layout/discover.scss
@@ -63,7 +63,7 @@
     background: linear-gradient(100deg, #9356DC,70%,#FF79DA);
     border-radius: 40px 40px 40px 40px;
     color: aliceblue;
-    font-size: large;
+    font-size: smaller;
     font-weight: 700;
     height: 25%; 
     cursor: pointer;
