--- a/sass/layout/footer.scss
+++ b/sass/layout/footer.scss
@@ -5,21 +5,24 @@ footer {
     
 }
 
-h4 {
+.footer_h4 {
     font-family:  "shrikhand", sans-serif;
     color: rgb(242, 242, 242);
     margin-left: 25px;
     margin-top: 0;
     padding-top: 5%;
+    margin-bottom: 10px;
     font-size: 20px;
     @include desktop {padding-top: 2%;
     display: flex;
     justify-content: flex-start;
+    margin-bottom: 2%;
     margin-left:20px;}
     @include tablette-only {padding-top: 2%;
     display: flex;
     flex-direction: row;
-    justify-content: flex-start;}
+    justify-content: flex-start;
+    margin-bottom: 2%;}
 
 }
 
@@ -29,9 +32,11 @@ h4 {
     margin-left: 25px;
     @include desktop {flex-direction: row;
     justify-content: flex-start;
+    align-items: flex-end;
     }
     @include tablette-only {flex-direction: row;
-        justify-content: flex-start;}
+        justify-content: flex-start;
+        align-items: flex-end;}
 
 
     p {
@@ -41,17 +46,20 @@ h4 {
         @include tablette-only {margin-right: 45px;}
     }
 
+
     .a__element {
         margin-top: 5px;
         color:rgb(242, 242, 242);
         text-decoration: none;
-        @include desktop {margin-right: 45px;}
-        @include tablette-only {margin-right: 45px;}
+        font-weight:300;
+        @include desktop {margin-right: 25px;}
+        @include tablette-only {margin-right: 25px;}
         
     }
 
     .a__element--modif1 {
         margin-left: 15px;
+        margin-right: 25px;
         margin-bottom: 8px;
         color:rgb(242, 242, 242);
         text-decoration: none;
@@ -59,6 +67,7 @@ h4 {
 
     .a__element--modif2 {
         margin-left:9px;
+        margin-right: 25px;
         margin-bottom:8px;
         color:rgb(242, 242, 242);
         text-decoration: none;
