--- a/sass/style.scss
+++ b/sass/style.scss
@@ -9,7 +9,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;500;700&display=swap');
 @import url("https://fonts.googleapis.com/css2?family=Shrikhand&display=swap");
 @import "./base/mixins.scss";
-@import "./layout/main_page.scss"
+@import "./layout/main_page.scss";
+@import "./layout/menu_page.scss";
 
 
         /*---<geolocalisation>---*/
