--- a/sass/layout/main_page.scss
+++ b/sass/layout/main_page.scss
@@ -116,6 +116,9 @@ color: black;
 font-size: 0.9rem;
 margin-bottom: 0;
 margin-left: 25px;
+white-space: nowrap;
+overflow: hidden;
+text-overflow: ellipsis;
 }
 
 .description_menu {
@@ -123,7 +126,6 @@ margin-left: 25px;
     justify-content: space-around;
     margin-right: 30px;
     flex-direction: column;
-    margin-top: 2%;
     flex-wrap: nowrap;
     width: 60%;
 }
@@ -138,6 +140,9 @@ p {
     font-weight: 300;
     color: rgb(76, 76, 76);
     font-size: 0.85rem;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }      
 
 
