--- a/sass/layout/menu_page.scss
+++ b/sass/layout/menu_page.scss
@@ -9,6 +9,20 @@
         width: 6rem;
     }
 }
+
+.title_menu_h4 {
+    overflow:hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+}
+
+.price {
+    width: 10%;
+    @include desktop {
+        margin-right :20%;
+    }
+}
+
 .menu_1 {
     animation: affichage 500ms;
     animation-fill-mode: both;
@@ -21,6 +35,9 @@
         display: flex;
         align-items: flex-end;
         margin-right: 3%;
+        @include desktop {
+            margin-right :20%;
+        }
         
     }
 
@@ -52,6 +69,9 @@
         display: flex;
         align-items: flex-end;
         margin-right: 3%;
+        @include desktop {
+            margin-right :20%;
+        }
     }
 
     &:hover .check_menu {
@@ -84,6 +104,9 @@
         display: flex;
         align-items: flex-end;
         margin-right: 3%;
+        @include desktop {
+            margin-right :20%;
+        }
         
     }
     &:hover .check_menu {
@@ -117,7 +140,10 @@
         
         display: flex;
         align-items: flex-end;
-        margin-right: 3%;         
+        margin-right: 3%;  
+        @include desktop {
+            margin-right :20%;
+        }       
     }
 
     &:hover .check_menu {
@@ -153,6 +179,9 @@
         display: flex;
         align-items: flex-end;
         margin-right: 3%;
+        @include desktop {
+            margin-right :20%;
+        }
         
     }
 
@@ -189,6 +218,9 @@
         display: flex;
         align-items: flex-end;
         margin-right: 3%;
+        @include desktop {
+            margin-right :20%;
+        }
         
     }
 
@@ -224,6 +256,9 @@
         display: flex;
         align-items: flex-end;
         margin-right: 3%;
+        @include desktop {
+            margin-right :20%;
+        }
         
     }
 
@@ -260,6 +295,9 @@
         display: flex;
         align-items: flex-end;
         margin-right: 3%;
+        @include desktop {
+            margin-right :20%;
+        }
        
     }
 
@@ -296,6 +334,9 @@
         display: flex;
         align-items: flex-end;
         margin-right: 3%;
+        @include desktop {
+            margin-right :20%;
+        }
     }
     
     &:hover .check_menu {
