--- a/sass/layout/nav_restau.scss
+++ b/sass/layout/nav_restau.scss
@@ -59,6 +59,7 @@
             position: absolute;
             bottom: 1rem;
             left: -10px;
+            color: #f7f7f7;
             
         }
        
