--- a/sass/layout/main_page.scss
+++ b/sass/layout/main_page.scss
@@ -260,6 +260,9 @@ margin-top: 10%;
     font-size: 2rem; 
     width: 100%;
     margin:0;}
+    @include tablette-only {
+        font-size: x-large;
+    }
 
     &:hover {
         background: linear-gradient(100deg, #b149da, 70%,#ff86f9);
