--- a/sass/layout/main_page.scss
+++ b/sass/layout/main_page.scss
@@ -261,7 +261,7 @@ margin-top: 10%;
     width: 100%;
     margin:0;}
     @include tablette-only {
-        font-size: x-large;
+        font-size: 2rem;
     }
 
     &:hover {
