--- a/sass/utils/animation.scss
+++ b/sass/utils/animation.scss
@@ -1,3 +1,5 @@
+      /* unrole-display animation */
+
 @keyframes affichage {
     from {
           opacity: (0);}
@@ -6,6 +8,9 @@
           opacity: (1);
         }   
 }
+
+      /* Check-box */
+
 
 @keyframes translate {
       from {
@@ -30,6 +35,37 @@
       }
 }
 
+      /* Loading spinner animation  */
+
+
+@keyframes time_load {
+      from {
+          opacity:(0,6);
+      }
+  
+      to {
+          opacity: (0);
+          visibility: hidden;
+      }
+      
+  }
+  
+  @keyframes icone_spinner {
+      0% {
+          
+          transform: rotate(0);
+      }
+  
+      50% {
+          
+          transform: rotate(180deg);
+      }
+  
+      100% {
+          transform: rotate(360deg);
+          
+      }
+  }
 
 
 
