--- a/sass/layout/main_accueil.scss
+++ b/sass/layout/main_accueil.scss
@@ -30,7 +30,7 @@ main {
         position: relative;
         padding-top: 8%;
         padding-bottom: 10%;
-        @include desktop {flex-wrap : wrap;
+        @include desktop {
             padding-top:0;
             margin-top: 5%;}
         
@@ -67,8 +67,6 @@ main {
 
 
         .vignette_info_photo {
-            color: black;
-            font-size: smaller;
             position: relative;
             cursor: pointer;
 
@@ -77,7 +75,8 @@ main {
             position: absolute;
             right: 1rem ;
             top: 25%;
-            cursor: pointer;           
+            cursor: pointer; 
+            color: black;          
             }
             
             .heartfull {
@@ -102,11 +101,13 @@ main {
             margin-top: 5px;
             margin-bottom: 5px;
             font-weight:100;
+            color: black;
         }
 
         .city {
             margin-top: 0;
             font-weight: 300;
+            color: black;
         }
     }
 
