--- a/sass/layout/nav_restau.scss
+++ b/sass/layout/nav_restau.scss
@@ -46,6 +46,9 @@
                 }
             }
 
+            /* puces numérotés */
+
+
         &::before {
             content: counter(order);
             counter-increment: order; 
