--- a/sass/layout/nav_restau.scss
+++ b/sass/layout/nav_restau.scss
@@ -16,7 +16,7 @@
         display: flex;
         flex-direction: column;
         gap: 1rem;
-        padding: 1rem;
+        padding: 2rem;
         list-style: none;
         counter-reset: order;
         @include desktop {flex-direction: row;}
@@ -25,20 +25,39 @@
 
     & li {
         position: relative;
-        font-weight: bold;
+        font-weight:bold;
         background-color:#f6f6f6;
-        padding: 1rem 2rem;
         flex-grow: 1;
         height: 4rem;
         border-radius: 1rem;
         display: flex;
-        justify-content: center;
+        justify-content: space-evenly;
         align-items: center;
         cursor: pointer;
         box-shadow: 3px 3px 3px 1px #e7e7e6;
         @include tablette-only {font-size: large;}
 
-        
+        .txt_filtres {
+            margin: 30px;
+            font-size: 1.1rem;
+            font-weight: bold;
+            width: 197px;
+            margin-left: 0;
+            @include tablette-only{
+                margin: auto;
+                font-size: 1.1rem;
+                font-weight: bold;
+                display: flex;
+                width: 50%;
+            }
+            @include desktop {
+                margin: auto;
+                font-size: 1.1rem;
+                font-weight: bold;
+                display: flex;
+                width: 50%;
+            }
+        }
         
         &:hover {background-color: rgb(247, 237, 255);
              i {
@@ -68,9 +87,13 @@
        
     }
      & i.fas {
-        margin-right: 2rem;
-        color: rgb(163, 156, 156);
+        padding-left:25px;
+        color: #a39c9c;
+        font-size: 1.5rem;
         @include tablette-only {font-size: xx-large;
-        margin-right: 3rem;}
+        margin-left: auto;}
+        @include desktop {
+            margin-left: auto;
+        }
     }
 }
